style/main.css
/* shared common styles*/
*{
    font-family: 'Lato', sans-serif;
    margin: 0;
    padding: 0;
}
html{
    width: 1920px;
}
.text-primary{
    color: #E55473;
}
.btn-primary{
    border-radius: 8px;
    background-color: #E55473;
    border: 0;
    font-size: 20px;
    font-weight: 700;
    color: white;
    padding: 20px 43px;
}
section{
    margin: 128px 0;
}
.section-title{
    color: #272727;
    text-align: center;
    font-size: 40px;
    font-weight: 800;
}
.section-description{
    color: rgba(39, 39, 39, 0.60);
    text-align: center;
    font-size: 18px;
    font-weight: 400;
    line-height: 30px;
    margin: 24px 0;
}

/* header related style */
header{
    background: rgba(229, 84, 115, 0.10);
}
.banner{
    margin:  0 240px;
    display: flex;
    align-items: center;
    justify-content: space-between;
}
.banner-content {
    max-width: 700px;
}
.banner-title {
    color: #272727;
    font-family: Lato;
    font-size: 80px;
    font-weight: 800;
}
.banner-description {
    color: rgba(39, 39, 39, 0.60);
    font-size: 18px;
    font-weight: 400;
    line-height: 30px;
    margin: 32px 0;
}
.banner-image {
    width: 635px;
    height: 800px;
}
/* counter related style */
#counter{
    margin: 0;
}
.counter-container{
    background: #111010;
    color: #FFFFFF;
    text-align: center;
    display: flex;
    justify-content: space-around;
    padding: 82px 0;
}
.counter-title{
    color: #FFFFFF;
    text-align: center;
    font-size: 40px;
    font-weight: 800;
}
.counter-description{
    color: #FFFFFF;
    text-align: center;
    font-size: 20px;
    font-weight: 400;
    line-height: 30px;
    padding-top: 10px;
}
/* features related style */
.features-container{
    display: flex;
    gap: 24px;
    margin: 0 240px;
}

.features {
    width: 464px;
    height: 538px;
    border-radius: 300px 300px 0px 0px;
}
.features-box {
    width: 100%;
    height: 100%;
    border-radius: 300px 300px 0px 0px;
    display: flex;
    align-items: flex-end;
    justify-content: center;
}
.features-box img {
    width: auto;
    height: auto;
}
.one{
    background: rgba(167, 33, 98, 0.15);
}
.two{
    background: rgba(5, 151, 160, 0.15);
}
.three{
    background: rgba(71, 125, 17, 0.15);
}
.features-title{
    color: #272727;
    text-align: center;
    font-size: 24px;
    font-weight: 700;
    line-height: 35px;
    text-decoration-line: underline;
}

/* service related style */
.service-container{
    border-radius: 8px;
    background: rgba(39, 39, 39, 0.05);
    text-align: center;
    display: flex;
    justify-content: space-around;
    margin:  0 240px;
    padding: 82px 0;
}
.service-title{
    color: rgba(39, 39, 39, 0.80);
    font-size: 24px;
    font-weight: 600;
    line-height: 35px;
}


/* offer related style */
.offer-container{
    background: rgba(229, 84, 115, 0.05);
    text-align: center;
    display: flex;
    justify-content: space-around;
    align-items: center;
    padding: 82px 0;
}

.offer-content{
    width: 600px;

}

.offer-image{
    height: 340px;
    width: 260px;
}

/* insta related style */
.insta-container{
    text-align: center;
    display: flex;
    gap: 24px;
    align-items: center;
    margin:  0 240px;
    padding: 82px 0;
}
.insta-box{
    width: 342px;
    height: 396px;
}


/* deal related style */
.deal-container {

    text-align: center;
    display: flex;
    align-items: center;
    margin: 0px 224px;
    padding: 64px 0;
}
.deal{
    margin: 0 240px;
    padding: 128px;
    border-radius: 8px;
    background: url('../images/deal.png');
    background-repeat: no-repeat;
}
.email {
    display: block;
    border: none;
    border-radius: 5px;
    padding: 22px 35px;
    font-size: 15px;
    width: 100%;
    margin-right: 12px;
}

footer{
    background: #111010;
    text-align: center;
    display: flex;
    justify-content: space-around;
    align-items: center;
    padding: 82px 0;
}
.footer-title{
    color: #FFFFFF;
    font-family: Lato;
    font-size: 48px;
    font-weight: 800;
    line-height: normal;
}
.footer-description{
    color: rgba(255, 255, 255, 0.90);
    text-align: center;
    font-size: 18px;
    font-weight: 400;
    line-height: 30px;
    margin: 24px 0;
}
.footer-copyright{
    color: rgba(255, 255, 255, 0.40);
    text-align: center;
    font-size: 16px;
    font-weight: 400;
    margin-top: 8px;
}

